compiler/parser.output
Terminals unused in grammar

    TOKEN_WHILE
    TOKEN_DO
    TOKEN_COLON
    TOKEN_ERROR


State 156 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_SEMI
    3     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    8 decl_list: decl decl_list
    9          | ε

   10 stmt: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
   11     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt TOKEN_ELSE stmt
   12     | TOKEN_FOR TOKEN_LPAREN expr_list TOKEN_SEMI expr TOKEN_SEMI expr_list TOKEN_RPAREN stmt
   13     | TOKEN_FOR TOKEN_LPAREN expr_list TOKEN_SEMI TOKEN_SEMI expr_list TOKEN_RPAREN stmt
   14     | TOKEN_LCRBR stmt_list TOKEN_RCRBR
   15     | decl
   16     | expr TOKEN_SEMI
   17     | TOKEN_GIVE expr TOKEN_SEMI
   18     | TOKEN_GIVE TOKEN_UP TOKEN_SEMI
   19     | TOKEN_GIVE expr TOKEN_PRINT_IN TOKEN_STDIN TOKEN_SEMI

   20 stmt_list: stmt stmt_list
   21          | ε

   22 term: term TOKEN_MUL factor
   23     | term TOKEN_DIV factor
   24     | term TOKEN_MODULUS factor
   25     | factor

   26 assignable: name
   27           | name TOKEN_SUBSCRIPT factor

   28 assignment_algebra: assignable TOKEN_ASSIGN algebra
   29                   | assignable TOKEN_ADD_WITH algebra
   30                   | assignable TOKEN_SUB_WITH algebra
   31                   | assignable TOKEN_MUL_WITH algebra
   32                   | assignable TOKEN_DIV_WITH algebra
   33                   | assignable TOKEN_INCREMENT
   34                   | assignable TOKEN_DECREMENT
   35                   | TOKEN_INCREMENT assignable
   36                   | TOKEN_DECREMENT assignable

   37 algebra: algebra TOKEN_PLUS term
   38        | algebra TOKEN_MINUS term
   39        | comparison_algebra
   40        | term

   41 starting_expr: assignment_algebra
   42              | logical_algebra
   43              | assignable TOKEN_ASSIGN assignment_algebra

   44 factor: name
   45       | TOKEN_INTEGER_LITERAL
   46       | TOKEN_FLOATING_POINT_LITERAL
   47       | string_literal
   48       | boolean_literal
   49       | char_literal
   50       | TOKEN_MINUS factor
   51       | TOKEN_NOT factor
   52       | name TOKEN_LPAREN expr_list TOKEN_RPAREN
   53       | name TOKEN_SUBSCRIPT factor
   54       | TOKEN_LPAREN expr TOKEN_RPAREN

   55 comparison_algebra: algebra TOKEN_EQUAL term
   56                   | algebra TOKEN_NOT_EQUAL term
   57                   | algebra TOKEN_LESS term
   58                   | algebra TOKEN_GREATER term
   59                   | algebra TOKEN_LESS_EQUAL term
   60                   | algebra TOKEN_GREATER_EQUAL term

   61 logical_algebra: expr TOKEN_AND algebra
   62                | expr TOKEN_OR algebra

   63 expr: starting_expr
   64     | algebra

   65 expr_list: expr next_expr
   66          | ε

   67 next_expr: TOKEN_COMMA expr_list
   68          | ε

   69 name: TOKEN_IDENT

   70 string_literal: TOKEN_STRING_LITERAL

   71 boolean_literal: TOKEN_TRUE
   72                | TOKEN_FALSE

   73 char_literal: TOKEN_CHAR_LITERAL

   74 allocation_size: TOKEN_INTEGER_LITERAL
   75                | TOKEN_UNKNOWN

   76 parameter: name TOKEN_LSQBR type TOKEN_RSQBR

   77 parameters: parameter list_of_parameters
   78           | ε

   79 list_of_parameters: TOKEN_COMMA parameters
   80                   | ε

   81 type: TOKEN_INT
   82     | TOKEN_CHAR
   83     | TOKEN_BOOL
   84     | TOKEN_FLOAT
   85     | TOKEN_VOID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_PRINT_IN (258) 19
    TOKEN_STDIN (259) 19
    TOKEN_ALLOCATE (260) 4 5 6
    TOKEN_SUBSCRIPT (261) 27 53
    TOKEN_UP (262) 18
    TOKEN_AND (263) 61
    TOKEN_OR (264) 62
    TOKEN_NOT (265) 51
    TOKEN_UNKNOWN (266) 75
    TOKEN_GIVE (267) 17 18 19
    TOKEN_IF (268) 10 11
    TOKEN_ELSE (269) 11
    TOKEN_WHILE (270)
    TOKEN_FOR (271) 12 13
    TOKEN_DO (272)
    TOKEN_CHAR (273) 82
    TOKEN_INT (274) 81
    TOKEN_FLOAT (275) 84
    TOKEN_BOOL (276) 83
    TOKEN_VOID (277) 85
    TOKEN_TRUE (278) 71
    TOKEN_FALSE (279) 72
    TOKEN_CHAR_LITERAL (280) 73
    TOKEN_INTEGER_LITERAL (281) 45 74
    TOKEN_FLOATING_POINT_LITERAL (282) 46
    TOKEN_IDENT (283) 69
    TOKEN_STRING_LITERAL (284) 70
    TOKEN_PLUS (285) 37
    TOKEN_MINUS (286) 38 50
    TOKEN_MUL (287) 22
    TOKEN_DIV (288) 23
    TOKEN_MODULUS (289) 24
    TOKEN_ASSIGN (290) 3 5 6 28 43
    TOKEN_EQUAL (291) 55
    TOKEN_NOT_EQUAL (292) 56
    TOKEN_GREATER (293) 58
    TOKEN_GREATER_EQUAL (294) 60
    TOKEN_LESS (295) 57
    TOKEN_LESS_EQUAL (296) 59
    TOKEN_INCREMENT (297) 33 35
    TOKEN_DECREMENT (298) 34 36
    TOKEN_ADD_WITH (299) 29
    TOKEN_SUB_WITH (300) 30
    TOKEN_MUL_WITH (301) 31
    TOKEN_DIV_WITH (302) 32
    TOKEN_LPAREN (303) 7 10 11 12 13 52 54
    TOKEN_RPAREN (304) 7 10 11 12 13 52 54
    TOKEN_LCRBR (305) 6 7 14
    TOKEN_RCRBR (306) 6 7 14
    TOKEN_LSQBR (307) 2 3 4 5 6 7 76
    TOKEN_RSQBR (308) 2 3 4 5 6 7 76
    TOKEN_COMMA (309) 67 79
    TOKEN_COLON (310)
    TOKEN_SEMI (311) 2 3 4 5 6 12 13 16 17 18 19
    TOKEN_ERROR (312)


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    program <decl> (59)
        on left: 1
        on right: 0
    decl <decl> (60)
        on left: 2 3 4 5 6 7
        on right: 8 15
    decl_list <decl> (61)
        on left: 8 9
        on right: 1 8
    stmt <stmt> (62)
        on left: 10 11 12 13 14 15 16 17 18 19
        on right: 10 11 12 13 20
    stmt_list <stmt> (63)
        on left: 20 21
        on right: 7 14 20
    term <expr> (64)
        on left: 22 23 24 25
        on right: 22 23 24 37 38 40 55 56 57 58 59 60
    assignable <expr> (65)
        on left: 26 27
        on right: 28 29 30 31 32 33 34 35 36 43
    assignment_algebra <expr> (66)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 41 43
    algebra <expr> (67)
        on left: 37 38 39 40
        on right: 28 29 30 31 32 37 38 55 56 57 58 59 60 61 62 64
    starting_expr <expr> (68)
        on left: 41 42 43
        on right: 63
    factor <expr> (69)
        on left: 44 45 46 47 48 49 50 51 52 53 54
        on right: 22 23 24 25 27 50 51 53
    comparison_algebra <expr> (70)
        on left: 55 56 57 58 59 60
        on right: 39
    logical_algebra <expr> (71)
        on left: 61 62
        on right: 42
    expr <expr> (72)
        on left: 63 64
        on right: 3 10 11 12 16 17 19 54 61 62 65
    expr_list <expr> (73)
        on left: 65 66
        on right: 6 12 13 52 67
    next_expr <expr> (74)
        on left: 67 68
        on right: 65
    name <name> (75)
        on left: 69
        on right: 2 3 4 5 6 7 26 27 44 52 53 76
    string_literal <name> (76)
        on left: 70
        on right: 5 47
    boolean_literal <integer> (77)
        on left: 71 72
        on right: 48
    char_literal <integer> (78)
        on left: 73
        on right: 49
    allocation_size <integer> (79)
        on left: 74 75
        on right: 4 5 6
    parameter <params> (80)
        on left: 76
        on right: 77
    parameters <params> (81)
        on left: 77 78
        on right: 7 79
    list_of_parameters <params> (82)
        on left: 79 80
        on right: 77
    type <type> (83)
        on left: 81 82 83 84 85
        on right: 2 3 4 5 6 7 76


State 0

    0 $accept: • program $end

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 9 (decl_list)

    program    go to state 2
    decl       go to state 3
    decl_list  go to state 4
    name       go to state 5


State 1

   69 name: TOKEN_IDENT •

    $default  reduce using rule 69 (name)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    8 decl_list: decl • decl_list

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 9 (decl_list)

    decl       go to state 3
    decl_list  go to state 7
    name       go to state 5


State 4

    1 program: decl_list •

    $default  reduce using rule 1 (program)


State 5

    2 decl: name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_SEMI
    3     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name • TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_LSQBR  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    8 decl_list: decl decl_list •

    $default  reduce using rule 8 (decl_list)


State 8

    2 decl: name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_SEMI
    3     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR • type TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_CHAR   shift, and go to state 9
    TOKEN_INT    shift, and go to state 10
    TOKEN_FLOAT  shift, and go to state 11
    TOKEN_BOOL   shift, and go to state 12
    TOKEN_VOID   shift, and go to state 13

    type  go to state 14


State 9

   82 type: TOKEN_CHAR •

    $default  reduce using rule 82 (type)


State 10

   81 type: TOKEN_INT •

    $default  reduce using rule 81 (type)


State 11

   84 type: TOKEN_FLOAT •

    $default  reduce using rule 84 (type)


State 12

   83 type: TOKEN_BOOL •

    $default  reduce using rule 83 (type)


State 13

   85 type: TOKEN_VOID •

    $default  reduce using rule 85 (type)


State 14

    2 decl: name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_SEMI
    3     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR type • TOKEN_RSQBR TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_RSQBR  shift, and go to state 15


State 15

    2 decl: name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_SEMI
    3     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ASSIGN expr TOKEN_SEMI
    4     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ALLOCATE allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI
    7     | name TOKEN_LSQBR type TOKEN_RSQBR • TOKEN_LPAREN parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_ALLOCATE  shift, and go to state 16
    TOKEN_ASSIGN    shift, and go to state 17
    TOKEN_LPAREN    shift, and go to state 18
    TOKEN_SEMI      shift, and go to state 19


State 16

    4 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE • allocation_size TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE • allocation_size TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE • allocation_size TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_UNKNOWN          shift, and go to state 20
    TOKEN_INTEGER_LITERAL  shift, and go to state 21

    allocation_size  go to state 22


State 17

    3 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN • expr TOKEN_SEMI

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_INCREMENT               shift, and go to state 31
    TOKEN_DECREMENT               shift, and go to state 32
    TOKEN_LPAREN                  shift, and go to state 33

    term                go to state 34
    assignable          go to state 35
    assignment_algebra  go to state 36
    algebra             go to state 37
    starting_expr       go to state 38
    factor              go to state 39
    comparison_algebra  go to state 40
    logical_algebra     go to state 41
    expr                go to state 42
    name                go to state 43
    string_literal      go to state 44
    boolean_literal     go to state 45
    char_literal        go to state 46


State 18

    7 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN • parameters TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 78 (parameters)

    name        go to state 47
    parameter   go to state 48
    parameters  go to state 49


State 19

    2 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_SEMI •

    $default  reduce using rule 2 (decl)


State 20

   75 allocation_size: TOKEN_UNKNOWN •

    $default  reduce using rule 75 (allocation_size)


State 21

   74 allocation_size: TOKEN_INTEGER_LITERAL •

    $default  reduce using rule 74 (allocation_size)


State 22

    4 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size • TOKEN_SEMI
    5     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size • TOKEN_ASSIGN string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size • TOKEN_ASSIGN TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_ASSIGN  shift, and go to state 50
    TOKEN_SEMI    shift, and go to state 51


State 23

   51 factor: TOKEN_NOT • factor

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_LPAREN                  shift, and go to state 33

    factor           go to state 52
    name             go to state 53
    string_literal   go to state 44
    boolean_literal  go to state 45
    char_literal     go to state 46


State 24

   71 boolean_literal: TOKEN_TRUE •

    $default  reduce using rule 71 (boolean_literal)


State 25

   72 boolean_literal: TOKEN_FALSE •

    $default  reduce using rule 72 (boolean_literal)


State 26

   73 char_literal: TOKEN_CHAR_LITERAL •

    $default  reduce using rule 73 (char_literal)


State 27

   45 factor: TOKEN_INTEGER_LITERAL •

    $default  reduce using rule 45 (factor)


State 28

   46 factor: TOKEN_FLOATING_POINT_LITERAL •

    $default  reduce using rule 46 (factor)


State 29

   70 string_literal: TOKEN_STRING_LITERAL •

    $default  reduce using rule 70 (string_literal)


State 30

   50 factor: TOKEN_MINUS • factor

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_LPAREN                  shift, and go to state 33

    factor           go to state 54
    name             go to state 53
    string_literal   go to state 44
    boolean_literal  go to state 45
    char_literal     go to state 46


State 31

   35 assignment_algebra: TOKEN_INCREMENT • assignable

    TOKEN_IDENT  shift, and go to state 1

    assignable  go to state 55
    name        go to state 56


State 32

   36 assignment_algebra: TOKEN_DECREMENT • assignable

    TOKEN_IDENT  shift, and go to state 1

    assignable  go to state 57
    name        go to state 56


State 33

   54 factor: TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_INCREMENT               shift, and go to state 31
    TOKEN_DECREMENT               shift, and go to state 32
    TOKEN_LPAREN                  shift, and go to state 33

    term                go to state 34
    assignable          go to state 35
    assignment_algebra  go to state 36
    algebra             go to state 37
    starting_expr       go to state 38
    factor              go to state 39
    comparison_algebra  go to state 40
    logical_algebra     go to state 41
    expr                go to state 58
    name                go to state 43
    string_literal      go to state 44
    boolean_literal     go to state 45
    char_literal        go to state 46


State 34

   22 term: term • TOKEN_MUL factor
   23     | term • TOKEN_DIV factor
   24     | term • TOKEN_MODULUS factor
   40 algebra: term •

    TOKEN_MUL      shift, and go to state 59
    TOKEN_DIV      shift, and go to state 60
    TOKEN_MODULUS  shift, and go to state 61

    $default  reduce using rule 40 (algebra)


State 35

   28 assignment_algebra: assignable • TOKEN_ASSIGN algebra
   29                   | assignable • TOKEN_ADD_WITH algebra
   30                   | assignable • TOKEN_SUB_WITH algebra
   31                   | assignable • TOKEN_MUL_WITH algebra
   32                   | assignable • TOKEN_DIV_WITH algebra
   33                   | assignable • TOKEN_INCREMENT
   34                   | assignable • TOKEN_DECREMENT
   43 starting_expr: assignable • TOKEN_ASSIGN assignment_algebra

    TOKEN_ASSIGN     shift, and go to state 62
    TOKEN_INCREMENT  shift, and go to state 63
    TOKEN_DECREMENT  shift, and go to state 64
    TOKEN_ADD_WITH   shift, and go to state 65
    TOKEN_SUB_WITH   shift, and go to state 66
    TOKEN_MUL_WITH   shift, and go to state 67
    TOKEN_DIV_WITH   shift, and go to state 68


State 36

   41 starting_expr: assignment_algebra •

    $default  reduce using rule 41 (starting_expr)


State 37

   37 algebra: algebra • TOKEN_PLUS term
   38        | algebra • TOKEN_MINUS term
   55 comparison_algebra: algebra • TOKEN_EQUAL term
   56                   | algebra • TOKEN_NOT_EQUAL term
   57                   | algebra • TOKEN_LESS term
   58                   | algebra • TOKEN_GREATER term
   59                   | algebra • TOKEN_LESS_EQUAL term
   60                   | algebra • TOKEN_GREATER_EQUAL term
   64 expr: algebra •

    TOKEN_PLUS           shift, and go to state 69
    TOKEN_MINUS          shift, and go to state 70
    TOKEN_EQUAL          shift, and go to state 71
    TOKEN_NOT_EQUAL      shift, and go to state 72
    TOKEN_GREATER        shift, and go to state 73
    TOKEN_GREATER_EQUAL  shift, and go to state 74
    TOKEN_LESS           shift, and go to state 75
    TOKEN_LESS_EQUAL     shift, and go to state 76

    $default  reduce using rule 64 (expr)


State 38

   63 expr: starting_expr •

    $default  reduce using rule 63 (expr)


State 39

   25 term: factor •

    $default  reduce using rule 25 (term)


State 40

   39 algebra: comparison_algebra •

    $default  reduce using rule 39 (algebra)


State 41

   42 starting_expr: logical_algebra •

    $default  reduce using rule 42 (starting_expr)


State 42

    3 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ASSIGN expr • TOKEN_SEMI
   61 logical_algebra: expr • TOKEN_AND algebra
   62                | expr • TOKEN_OR algebra

    TOKEN_AND   shift, and go to state 77
    TOKEN_OR    shift, and go to state 78
    TOKEN_SEMI  shift, and go to state 79


State 43

   26 assignable: name •
   27           | name • TOKEN_SUBSCRIPT factor
   44 factor: name •
   52       | name • TOKEN_LPAREN expr_list TOKEN_RPAREN
   53       | name • TOKEN_SUBSCRIPT factor

    TOKEN_SUBSCRIPT  shift, and go to state 80
    TOKEN_LPAREN     shift, and go to state 81

    TOKEN_ASSIGN     reduce using rule 26 (assignable)
    TOKEN_INCREMENT  reduce using rule 26 (assignable)
    TOKEN_DECREMENT  reduce using rule 26 (assignable)
    TOKEN_ADD_WITH   reduce using rule 26 (assignable)
    TOKEN_SUB_WITH   reduce using rule 26 (assignable)
    TOKEN_MUL_WITH   reduce using rule 26 (assignable)
    TOKEN_DIV_WITH   reduce using rule 26 (assignable)
    $default         reduce using rule 44 (factor)


State 44

   47 factor: string_literal •

    $default  reduce using rule 47 (factor)


State 45

   48 factor: boolean_literal •

    $default  reduce using rule 48 (factor)


State 46

   49 factor: char_literal •

    $default  reduce using rule 49 (factor)


State 47

   76 parameter: name • TOKEN_LSQBR type TOKEN_RSQBR

    TOKEN_LSQBR  shift, and go to state 82


State 48

   77 parameters: parameter • list_of_parameters

    TOKEN_COMMA  shift, and go to state 83

    $default  reduce using rule 80 (list_of_parameters)

    list_of_parameters  go to state 84


State 49

    7 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_LPAREN parameters • TOKEN_RPAREN TOKEN_LCRBR stmt_list TOKEN_RCRBR

    TOKEN_RPAREN  shift, and go to state 85


State 50

    5 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN • string_literal TOKEN_SEMI
    6     | name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_ASSIGN • TOKEN_LCRBR expr_list TOKEN_RCRBR TOKEN_SEMI

    TOKEN_STRING_LITERAL  shift, and go to state 29
    TOKEN_LCRBR           shift, and go to state 86

    string_literal  go to state 87


State 51

    4 decl: name TOKEN_LSQBR type TOKEN_RSQBR TOKEN_ALLOCATE allocation_size TOKEN_SEMI •

    $default  reduce using rule 4 (decl)


State 52

   51 factor: TOKEN_NOT factor •

    $default  reduce using rule 51 (factor)


State 53

   44 factor: name •
   52       | name • TOKEN_LPAREN expr_list TOKEN_RPAREN
   53       | name • TOKEN_SUBSCRIPT factor

    TOKEN_SUBSCRIPT  shift, and go to state 88
    TOKEN_LPAREN     shift, and go to state 81

    $default  reduce using rule 44 (factor)


State 54

   50 factor: TOKEN_MINUS factor •

    $default  reduce using rule 50 (factor)


State 55

   35 assignment_algebra: TOKEN_INCREMENT assignable •

    $default  reduce using rule 35 (assignment_algebra)


State 56

   26 assignable: name •
   27           | name • TOKEN_SUBSCRIPT factor

    TOKEN_SUBSCRIPT  shift, and go to state 89

    $default  reduce using rule 26 (assignable)


State 57

   36 assignment_algebra: TOKEN_DECREMENT assignable •

    $default  reduce using rule 36 (assignment_algebra)


State 58

   54 factor: TOKEN_LPAREN expr • TOKEN_RPAREN
   61 logical_algebra: expr • TOKEN_AND algebra
   62                | expr • TOKEN_OR algebra

    TOKEN_AND     shift, and go to state 77
    TOKEN_OR      shift, and go to state 78
    TOKEN_RPAREN  shift, and go to state 90


State 59

   22 term: term TOKEN_MUL • factor

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_LPAREN                  shift, and go to state 33

    factor           go to state 91
    name             go to state 53
    string_literal   go to state 44
    boolean_literal  go to state 45
    char_literal     go to state 46


State 60

   23 term: term TOKEN_DIV • factor

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_LPAREN                  shift, and go to state 33

    factor           go to state 92
    name             go to state 53
    string_literal   go to state 44
    boolean_literal  go to state 45
    char_literal     go to state 46


State 61

   24 term: term TOKEN_MODULUS • factor

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_LPAREN                  shift, and go to state 33

    factor           go to state 93
    name             go to state 53
    string_literal   go to state 44
    boolean_literal  go to state 45
    char_literal     go to state 46


State 62

   28 assignment_algebra: assignable TOKEN_ASSIGN • algebra
   43 starting_expr: assignable TOKEN_ASSIGN • assignment_algebra

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_INCREMENT               shift, and go to state 31
    TOKEN_DECREMENT               shift, and go to state 32
    TOKEN_LPAREN                  shift, and go to state 33

    term                go to state 34
    assignable          go to state 94
    assignment_algebra  go to state 95
    algebra             go to state 96
    factor              go to state 39
    comparison_algebra  go to state 40
    name                go to state 43
    string_literal      go to state 44
    boolean_literal     go to state 45
    char_literal        go to state 46


State 63

   33 assignment_algebra: assignable TOKEN_INCREMENT •

    $default  reduce using rule 33 (assignment_algebra)


State 64

   34 assignment_algebra: assignable TOKEN_DECREMENT •

    $default  reduce using rule 34 (assignment_algebra)


State 65

   29 assignment_algebra: assignable TOKEN_ADD_WITH • algebra

    TOKEN_NOT                     shift, and go to state 23
    TOKEN_TRUE                    shift, and go to state 24
    TOKEN_FALSE                   shift, and go to state 25
    TOKEN_CHAR_LITERAL            shift, and go to state 26
    TOKEN_INTEGER_LITERAL         shift, and go to state 27
    TOKEN_FLOATING_POINT_LITERAL  shift, and go to state 28
    TOKEN_IDENT                   shift, and go to state 1
    TOKEN_STRING_LITERAL          shift, and go to state 29
    TOKEN_MINUS                   shift, and go to state 30
    TOKEN_LPAREN                  shift, and go to state 33

    term                go to state 34
    algebra             go to state 97
    factor              go to state 39
    comparison_algebra  go to state 40
    name                go to state 53
    string_literal      go to state 44
    boolean_literal     go to state 45
    char_literal        go to state 46


State 66

   30 assignment_algebra: assignable TOKEN_SUB_WITH • algebra
